--- a/index.html
+++ b/index.html
@@ -21,11 +21,14 @@
         <div class="row">
             <!-- Main Content Area -->
             <main class="col-md-9 col-lg-10 px-md-4">
-                <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                    <h1 class="h2">Bloggern't</h1>
-                </div>
+                            <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                                <h1 class="h2">Bloggern't</h1>
+                                <div class="btn-toolbar mb-2 mb-md-0">
+                                    <button id="login" class="btn btn-primary">Login with GitHub</button>
+                                </div>
+                            </div>
 
-                <form id="postForm">
+                            <form id="postForm">
                     <div class="mb-3">
                         <input type="text" class="form-control form-control-lg" id="title" placeholder="Post Title" required>
                     </div>
@@ -343,4 +346,3 @@ sharing: ${sharing}
     </script>
 </body>
 </html>
-
