--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
-    <script src="https://cdn.skypack.dev/@octokit/rest"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@octokit/rest@19.0.7/dist/index.min.js"></script>
     <script>
         window.AUTH_TOKEN = '{{ env.AUTH_TOKEN }}';
     </script>
