Fua loco, no existe el buffer

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                         repo: 'devlog',
                         path: path,
                         message: message,
-                        content: Buffer.from(content).toString('base64'),
+                        content: btoa(content),
                         branch: DEVLOG_BRANCH
                     });
                 }
