--- a/index.html
+++ b/index.html
@@ -206,12 +206,13 @@
                 }
                 function generatePostContent() {
                     const title = document.getElementById('title').value;
-                    const date = document.getElementById('date').value;
+                    const date = document.getElementById('date').value || new Date().toISOString();
                     const tags = document.getElementById('tags').value.split(',').map(tag => tag.trim());
                     const comments = document.getElementById('comments').value;
                     const sharing = document.getElementById('sharing').value;
                     const markdownContent = simplemde.value().trim();
 
+                    // Format date as YYYY-MM-DD HH:mm:ss +0000
                     const formattedDate = new Date(date).toISOString().replace('T', ' ').replace(/\.\d{3}Z$/, ' +0000');
 
                     return `---
@@ -223,7 +224,8 @@ comments: ${comments}
 sharing: ${sharing}
 ---
 
-${markdownContent}`;                }        document.getElementById('saveButton').addEventListener('click', () => {
+${markdownContent}`;
+              }        document.getElementById('saveButton').addEventListener('click', () => {
             autoSave();
             alert('Post saved as draft');
         });
