--- a/posts.html
+++ b/posts.html
@@ -360,8 +360,33 @@
         window.editPost = function(filename) {
             // Remove the .md extension and date prefix for cleaner URLs
             const cleanName = filename.replace(/^\d{4}-\d{2}-\d{2}-/, '').replace(/\.md$/, '');
-            window.location.href = `edit/${cleanName}`;
+            // Properly encode the URL to handle special characters
+            window.location.href = `edit/${encodeURIComponent(cleanName)}`;
         };
+
+        function slugify(text) {
+            return text
+                .toString()
+                .toLowerCase()
+                .trim()
+                // Replace accented characters with their base equivalents
+                .normalize('NFD')
+                .replace(/[\u0300-\u036f]/g, '')
+                // Replace special characters with their equivalents
+                .replace(/ñ/g, 'n')
+                .replace(/ç/g, 'c')
+                .replace(/ß/g, 'ss')
+                .replace(/æ/g, 'ae')
+                .replace(/œ/g, 'oe')
+                .replace(/ø/g, 'o')
+                .replace(/å/g, 'a')
+                .replace(/ð/g, 'd')
+                .replace(/þ/g, 'th')
+                // Replace spaces and special characters with hyphens
+                .replace(/[^a-z0-9]+/g, '-')
+                // Remove leading/trailing hyphens
+                .replace(/^-+|-+$/g, '');
+        }
 
         async function exchangeCodeForToken(code) {
             try {
