--- a/index.html
+++ b/index.html
@@ -337,10 +337,69 @@
             const date = document.getElementById('date').value;
 
             const previewContent = `
-                <h1>${title}</h1>
-                <p>Published on: ${new Date(date).toLocaleDateString()}</p>
-
-                ${simplemde.markdown(content)}
+                <!DOCTYPE html>
+                <html>
+                <head>
+                    <meta charset="UTF-8">
+                    <title>Preview: ${title}</title>
+                    <style>
+                        body {
+                            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+                            max-width: 800px;
+                            margin: 0 auto;
+                            padding: 20px;
+                            line-height: 1.6;
+                            color: #333;
+                        }
+                        h1, h2, h3, h4, h5, h6 {
+                            margin-top: 24px;
+                            margin-bottom: 16px;
+                            font-weight: 600;
+                        }
+                        h1 { font-size: 2em; border-bottom: 1px solid #eee; padding-bottom: 10px; }
+                        h2 { font-size: 1.5em; }
+                        h3 { font-size: 1.25em; }
+                        p { margin-bottom: 16px; }
+                        img, video { max-width: 100%; height: auto; margin: 16px 0; }
+                        video { display: block; }
+                        blockquote {
+                            border-left: 4px solid #ddd;
+                            margin: 0;
+                            padding-left: 16px;
+                            color: #666;
+                        }
+                        code {
+                            background: #f6f8fa;
+                            padding: 2px 4px;
+                            border-radius: 3px;
+                            font-family: 'Courier New', monospace;
+                        }
+                        pre {
+                            background: #f6f8fa;
+                            padding: 16px;
+                            border-radius: 6px;
+                            overflow-x: auto;
+                        }
+                        ul, ol { padding-left: 30px; }
+                        li { margin-bottom: 8px; }
+                        hr { border: none; border-top: 1px solid #eee; margin: 24px 0; }
+                        .date-info {
+                            color: #666;
+                            font-size: 0.9em;
+                            margin-bottom: 24px;
+                            padding-bottom: 16px;
+                            border-bottom: 1px solid #eee;
+                        }
+                    </style>
+                </head>
+                <body>
+                    <h1>${title}</h1>
+                    <div class="date-info">Published on: ${new Date(date).toLocaleDateString()}</div>
+                    <div class="content">
+                        ${simplemde.markdown(content)}
+                    </div>
+                </body>
+                </html>
             `;
 
             const previewWindow = window.open();
