--- a/posts.html
+++ b/posts.html
@@ -358,14 +358,9 @@
         }
 
         window.editPost = function(filename) {
-            console.log('Editing post:', filename);
-            // Remove the .md extension and date prefix for cleaner URLs
             const cleanName = filename.replace(/^\d{4}-\d{2}-\d{2}-/, '').replace(/\.md$/, '');
-            console.log('Clean name:', cleanName);
-            // Properly encode the URL to handle special characters
             const encodedName = encodeURIComponent(cleanName);
-            console.log('Encoded name:', encodedName);
-            window.location.href = `/edit/${encodedName}`;
+            window.location.href = `edit.html?post=${encodedName}`;
         };
 
         function slugify(text) {
