--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.jsdelivr.net https://cdn.skypack.dev https://esm.sh chrome-extension:; connect-src https://api.github.com https://devlog-admin.netlify.app/.netlify/functions/">
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.jsdelivr.net https://cdn.skypack.dev https://esm.sh chrome-extension:; connect-src 'self' https://api.github.com https://admin.blog.farteam.com.ar/.netlify/functions/">
     <title>Devlog Admin</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
@@ -742,7 +742,7 @@ ${markdownContent}`;
         const GITHUB_CLIENT_ID = 'Ov23liRLEzfDmfWE4Wap';
         
         document.getElementById('login').addEventListener('click', () => {
-            const authUrl = `https://github.com/login/oauth/authorize?client_id=${GITHUB_CLIENT_ID}&redirect_uri=${encodeURIComponent('https://devlog-admin.netlify.app/index.html')}&scope=repo`;
+        const authUrl = `https://github.com/login/oauth/authorize?client_id=${GITHUB_CLIENT_ID}&redirect_uri=${encodeURIComponent('https://admin.blog.farteam.com.ar/index.html')}&scope=repo`;
             window.location.href = authUrl;
         });
         
