--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div class="logo">Bloggern't</div>
         <div class="header-actions">
             <a href="posts.html" class="btn-blogger-secondary">Posts</a>
+            <button id="themeToggle" class="btn-blogger-secondary" title="Toggle theme">🌙</button>
             <button id="login" class="btn-blogger">Sign in with GitHub</button>
             <div id="userProfile" class="user-profile" style="display: none;">
                 <div class="user-info">
@@ -948,5 +949,6 @@ ${markdownContent}`;
             window.location.href = '/posts';
         }
     </script>
+    <script src="dark-mode.js"></script>
 </body>
 </html>
