--- a/edit.html
+++ b/edit.html
@@ -62,7 +62,7 @@
                 
                 <div class="header-actions">
                     <button type="submit" class="btn-blogger">Save Post</button>
-                    <button type="button" id="deleteBtn" class="btn-blogger" style="background: #d93025;">Delete Post</button>
+                    <button type="button" id="deleteBtn" class="btn-danger">Delete Post</button>
                 </div>
             </form>
         </div>
