--- a/posts.html
+++ b/posts.html
@@ -24,7 +24,7 @@
         .post-card:hover { box-shadow: 0 2px 8px rgba(0,0,0,0.15); border-color: var(--border); }
         .post-title { font-size: 16px; font-weight: 500; color: var(--text); margin: 0 0 8px 0; line-height: 1.4; }
         .post-meta { font-size: 14px; color: var(--muted); margin-bottom: 8px; }
-        .post-excerpt { font-size: 14px; color: var(--muted); line-height: 1.4; margin: 0; display: -webkit-box; -webkit-line-clamp: 3; -webkit-box-orient: vertical; overflow: hidden; }
+    .post-excerpt { font-size: 14px; color: var(--muted); line-height: 1.4; margin: 0; display: -webkit-box; -webkit-line-clamp: 3; -webkit-box-orient: vertical; line-clamp: 3; overflow: hidden; }
         .post-tags { display: flex; gap: 4px; margin-top: 8px; flex-wrap: wrap; }
         .post-tag { background: var(--chip-bg); color: var(--primary); font-size: 12px; padding: 2px 8px; border-radius: 12px; }
         .loading { text-align: center; padding: 40px; color: var(--muted); }
