--- a/edit.html
+++ b/edit.html
@@ -191,7 +191,8 @@
                 const { data: files } = await octokit.rest.repos.getContent({
                     owner: 'FaR-Team',
                     repo: 'devlog',
-                    path: '_posts'
+                    path: '_posts',
+                    headers: { 'If-None-Match': '' }
                 });
 
                 const matchingFile = files.find(file => {
@@ -209,7 +210,8 @@
                 const { data: content } = await octokit.rest.repos.getContent({
                     owner: 'FaR-Team',
                     repo: 'devlog',
-                    path: matchingFile.path
+                    path: matchingFile.path,
+                    headers: { 'If-None-Match': '' }
                 });
 
                 const decoded = atob(content.content);
@@ -287,7 +289,8 @@ ${content}`;
                 const { data: currentFile } = await octokit.rest.repos.getContent({
                     owner: 'FaR-Team',
                     repo: 'devlog',
-                    path: `_posts/${currentFilename}`
+                    path: `_posts/${currentFilename}`,
+                    headers: { 'If-None-Match': '' }
                 });
 
                 await octokit.rest.repos.createOrUpdateFileContents({
@@ -321,7 +324,8 @@ ${content}`;
                 const { data: currentFile } = await octokit.rest.repos.getContent({
                     owner: 'FaR-Team',
                     repo: 'devlog',
-                    path: `_posts/${currentFilename}`
+                    path: `_posts/${currentFilename}`,
+                    headers: { 'If-None-Match': '' }
                 });
 
                 await octokit.rest.repos.deleteFile({
