--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@
         </aside>
     </div>
 
+    <div id="toastContainer" class="toast-container"></div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
     <script src="https://esm.sh/@octokit/rest"></script>
@@ -126,6 +128,25 @@
     </script>
     <script type="module">
         import { Octokit } from 'https://esm.sh/@octokit/rest';
+
+        window.showToast = function (message, type = 'info', duration = 3000) {
+            const container = document.getElementById('toastContainer');
+            const toast = document.createElement('div');
+            toast.className = `toast ${type}`;
+
+            let icon = '';
+            if (type === 'success') icon = '✅';
+            else if (type === 'error') icon = '❌';
+            else icon = 'ℹ️';
+
+            toast.innerHTML = `<span class="toast-icon">${icon}</span> ${message}`;
+            container.appendChild(toast);
+
+            setTimeout(() => {
+                toast.style.opacity = '0';
+                setTimeout(() => toast.remove(), 300);
+            }, duration);
+        }
 
         function slugify(text) {
             return text
@@ -417,12 +438,12 @@
             const project = document.getElementById('project').value;
 
             if (!title) {
-                alert('Please enter a title');
+                showToast('Please enter a title', 'error');
                 return;
             }
 
             if (!project) {
-                alert('Please select a project');
+                showToast('Please select a project', 'error');
                 return;
             }
 
@@ -509,12 +530,12 @@
                 const project = document.getElementById('project').value;
 
                 if (!title.trim()) {
-                    alert('Please enter a title');
+                    showToast('Please enter a title', 'error');
                     return;
                 }
 
                 if (!project) {
-                    alert('Please select a project');
+                    showToast('Please select a project', 'error');
                     return;
                 }
 
@@ -530,7 +551,7 @@
                 }
 
                 const actionType = isDraft ? 'saved as draft' : (window.editingFilename ? 'updated' : 'published');
-                alert(`Post ${actionType} successfully!`);
+                showToast(`Post ${actionType} successfully!`, 'success');
 
                 localStorage.removeItem('autoSaveTitle');
                 localStorage.removeItem('autoSaveContent');
@@ -539,7 +560,7 @@
 
             } catch (error) {
                 console.error('Failed to save post:', error);
-                alert(`Failed to save post: ${error.message}`);
+                showToast(`Failed to save post: ${error.message}`, 'error');
             }
         }
 
@@ -626,6 +647,9 @@ ${markdownContent}`;
 
         async function uploadImageToGitHub(file) {
             try {
+                showToast('Uploading image...', 'info', 10000);
+                simplemde.codemirror.setOption('readOnly', true);
+
                 const newFilename = generateImageFilename(file.name);
                 const apiUrl = 'https://api.github.com/repos/FaR-Team/devlog/contents/images/' + newFilename;
 
@@ -659,16 +683,31 @@ ${markdownContent}`;
                     throw new Error('Unexpected response format from GitHub API');
                 }
 
+                showToast('Image uploaded successfully!', 'success');
+                simplemde.codemirror.setOption('readOnly', false);
                 return data.content.download_url;
             } catch (error) {
                 console.error('Error uploading image:', error);
-                alert(`Failed to upload image: ${error.message}`);
+
+                const container = document.getElementById('toastContainer');
+                container.innerHTML = '';
+
+                console.error('Error uploading image:', error);
+
+                const toastContainer = document.getElementById('toastContainer');
+                toastContainer.innerHTML = '';
+
+                showToast(`Failed to upload image: ${error.message}`, 'error');
+                simplemde.codemirror.setOption('readOnly', false);
                 throw error;
             }
         }
 
         async function uploadVideoToGitHub(file) {
             try {
+                showToast('Uploading video/GIF... this may take a while', 'info', 30000);
+                simplemde.codemirror.setOption('readOnly', true);
+
                 const newFilename = generateVideoFilename(file.name);
                 const apiUrl = 'https://api.github.com/repos/FaR-Team/devlog/contents/videos/' + newFilename;
 
@@ -697,10 +736,17 @@ ${markdownContent}`;
                 }
 
                 const data = await response.json();
+                showToast('Video/GIF uploaded successfully!', 'success');
+                simplemde.codemirror.setOption('readOnly', false);
                 return data.content.download_url;
             } catch (error) {
                 console.error('Error uploading video:', error);
-                alert(`Failed to upload video: ${error.message}`);
+
+                const container = document.getElementById('toastContainer');
+                container.innerHTML = '';
+
+                showToast(`Failed to upload video: ${error.message}`, 'error');
+                simplemde.codemirror.setOption('readOnly', false);
                 throw error;
             }
         }
@@ -721,11 +767,11 @@ ${markdownContent}`;
                     await updateUserProfile();
                 } else {
                     console.error('No access token received:', data);
-                    alert('Failed to authenticate with GitHub');
+                    showToast('Failed to authenticate with GitHub', 'error');
                 }
             } catch (error) {
                 console.error('Token exchange failed:', error);
-                alert('Authentication failed. Please try again.');
+                showToast('Authentication failed. Please try again.', 'error');
             }
         }
 
@@ -843,12 +889,12 @@ ${markdownContent}`;
                 } else {
                     console.error('No matching file found for slug:', slug);
                     console.log('Available slugs:', files.filter(f => f.name.endsWith('.md')).map(f => f.name.replace(/^\d{4}-\d{2}-\d{2}-/, '').replace(/\.md$/, '')));
-                    alert('Post not found');
+                    showToast('Post not found', 'error');
                     window.location.href = '/posts';
                 }
             } catch (error) {
                 console.error('Failed to find post:', error);
-                alert('Failed to load post: ' + error.message);
+                showToast('Failed to load post: ' + error.message, 'error');
                 window.location.href = '/posts';
             }
         }
@@ -906,7 +952,7 @@ ${markdownContent}`;
 
             } catch (error) {
                 console.error('Failed to load post:', error);
-                alert('Failed to load post for editing');
+                showToast('Failed to load post for editing', 'error');
             }
         }
 
