--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </aside>
     </div>
 
-    <div id="toastContainer" class="toast-container"></div>
+    <div id="toastContainer" class="custom-toast-container"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
@@ -132,7 +132,7 @@
         window.showToast = function (message, type = 'info', duration = 3000) {
             const container = document.getElementById('toastContainer');
             const toast = document.createElement('div');
-            toast.className = `toast ${type}`;
+            toast.className = `custom-toast ${type}`;
 
             let icon = '';
             if (type === 'success') icon = '✅';
