--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                     <button type="button" id="previewButton" class="btn-blogger-secondary">Preview</button>
                     <button type="button" id="previewMarkdownButton" class="btn-blogger-secondary">View
                         markdown</button>
+                    <button type="button" id="viewHtmlButton" class="btn-blogger-secondary">View HTML</button>
                 </div>
             </form>
         </main>
@@ -607,6 +608,46 @@
 
             const previewWindow = window.open();
             previewWindow.document.write(previewContent);
+            previewWindow.document.close();
+        });
+
+        document.getElementById('viewHtmlButton').addEventListener('click', () => {
+            const content = simplemde.value();
+            const htmlContent = simplemde.markdown(content);
+
+            const previewWindow = window.open('', '_blank', 'width=800,height=600');
+            previewWindow.document.write(`
+                <!DOCTYPE html>
+                <html>
+                <head>
+                    <title>HTML Source Preview</title>
+                    <style>
+                        body { 
+                            font-family: 'Courier New', monospace; 
+                            padding: 20px; 
+                            background: #f5f5f5; 
+                            color: #333;
+                        }
+                        .html-container {
+                            background: white;
+                            padding: 24px;
+                            border: 1px solid #ddd;
+                            border-radius: 8px;
+                            white-space: pre-wrap;
+                            word-break: break-all;
+                            font-size: 14px;
+                            line-height: 1.5;
+                            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+                        }
+                        h2 { font-family: sans-serif; margin-top: 0; }
+                    </style>
+                </head>
+                <body>
+                    <h2>Rendered HTML Source</h2>
+                    <div class="html-container">${htmlContent.replace(/&/g, '&amp;').replace(/</g, '&lt;').replace(/>/g, '&gt;')}</div>
+                </body>
+                </html>
+            `);
             previewWindow.document.close();
         });
 
